--- a/scss/components/card.scss
+++ b/scss/components/card.scss
@@ -13,7 +13,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-
+        
         &:after {
             content: "";
             position: absolute;
@@ -22,15 +22,17 @@
             left: 0;
             bottom: 0px;
             box-shadow: 0 0px 50px rgba(0, 255, 255, 0.466);
+            border-radius: 8px;
         }
-
+        
         .card-content {
             position: relative;
             width: 100%;
             height: 100%;
             border: 1px solid rgb(99, 99, 99);
             background: black;
-
+            border-radius: 8px;
+            
             .card-text {
                 transform-style: preserve-3d;
                 color: white;
